fix(form): fix text overflow ellipsis of lable (#949)

--- a/packages/theme/system/delon/_sf.less
+++ b/packages/theme/system/delon/_sf.less
@@ -132,6 +132,16 @@
       }
     }
   }
+  &__horizontal {
+    .@{ant-prefix}-form-item-label > label {
+      display: flex;
+      justify-content: flex-end;
+    }
+    @{sf-prefix}__label-text {
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  }
   &__no-colon {
     .@{ant-prefix}-form-item-label {
       label {
